k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
    managed-by: terraform
